log
Wed 27 Mar 2024 11:27:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8c9dfaf
Wed 27 Mar 2024 11:32:16 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:9: error: expected identifier or ‘(’ before ‘->’ token
   35 |     List->head = new;
      |         ^~
list.c:36:5: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   36 |     list->tail = new;
      |     ^~~~
      |     List
list.c:36:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fb6a6ba
Wed 27 Mar 2024 11:32:35 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:9: error: expected identifier or ‘(’ before ‘->’ token
   35 |     List->head = new;
      |         ^~
list.c:36:9: error: expected identifier or ‘(’ before ‘->’ token
   36 |     List->tail = new;
      |         ^~
list.c:37:9: error: expected identifier or ‘(’ before ‘->’ token
   37 |     List->current = new;
      |         ^~
Compilation failed
f6a59d2
Wed 27 Mar 2024 11:33:56 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:9: error: expected identifier or ‘(’ before ‘->’ token
   36 |     List->head = new;
      |         ^~
list.c:37:9: error: expected identifier or ‘(’ before ‘->’ token
   37 |     List->tail = new;
      |         ^~
list.c:38:9: error: expected identifier or ‘(’ before ‘->’ token
   38 |     List->current = new;
      |         ^~
Compilation failed
80549d9
Wed 27 Mar 2024 11:34:43 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:9: error: expected identifier or ‘(’ before ‘.’ token
   35 |     List.head = new;
      |         ^
list.c:36:9: error: expected identifier or ‘(’ before ‘.’ token
   36 |     List.tail = new;
      |         ^
list.c:37:9: error: expected identifier or ‘(’ before ‘.’ token
   37 |     List.current = new;
      |         ^
Compilation failed
fa2d12d
Wed 27 Mar 2024 11:35:55 PM UTC: 
 list.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
b20954e
Wed 27 Mar 2024 11:38:54 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
074b6c7
Wed 27 Mar 2024 11:39:27 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ba320f2
Wed 27 Mar 2024 11:40:02 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f81f0a8
